--- a/Aulas-POO-Java/nbproject/project.properties
+++ b/Aulas-POO-Java/nbproject/project.properties
@@ -71,7 +71,7 @@ jlink.additionalmodules=
 jlink.additionalparam=
 jlink.launcher=true
 jlink.launcher.name=Aulas-POO-Java
-main.class=aulas.poo.java.AulasPOOJava
+main.class=AulasUdemy.AulaFila
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
