--- a/Aulas-POO-Java/nbproject/project.properties
+++ b/Aulas-POO-Java/nbproject/project.properties
@@ -59,7 +59,8 @@ javac.classpath=\
     ${file.reference.orsoncharts-1.4-eval-nofx.jar}:\
     ${file.reference.orsonpdf-1.6-eval.jar}:\
     ${file.reference.servlet.jar}:\
-    ${file.reference.swtgraphics2d.jar}
+    ${file.reference.swtgraphics2d.jar}:\
+    ${libs.Mysql_Connector_Java_5.1.49.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
