--- a/Aulas-POO-Java/nbproject/project.properties
+++ b/Aulas-POO-Java/nbproject/project.properties
@@ -60,7 +60,8 @@ javac.classpath=\
     ${file.reference.orsonpdf-1.6-eval.jar}:\
     ${file.reference.servlet.jar}:\
     ${file.reference.swtgraphics2d.jar}:\
-    ${libs.Mysql_Connector_Java_5.1.49.classpath}
+    ${libs.Mysql_Connector_Java_5.1.49.classpath}:\
+    ${libs.absolutelayout.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
