--- a/Aulas-POO-Java/nbproject/project.properties
+++ b/Aulas-POO-Java/nbproject/project.properties
@@ -41,6 +41,7 @@ file.reference.jfreechart-1.0.19.jar=D:\\Executaveis\\Biblioteca Java\\jfreechar
 file.reference.jfreesvg-2.0.jar=D:\\Executaveis\\Biblioteca Java\\jfreechart-1.0.19\\lib\\jfreesvg-2.0.jar
 file.reference.junit-4.11.jar=D:\\Executaveis\\Biblioteca Java\\jfreechart-1.0.19\\lib\\junit-4.11.jar
 file.reference.mysql-connector-java-5.1.47.jar=D:\\Programas\\NetBeans\\Downloads\\mysql-connector-java-5.1.47.jar
+file.reference.mysql-connector-java-5.1.47.jar-1=D:\\Executaveis\\Biblioteca Java\\mysql-connector-java-5.1.47.jar
 file.reference.orsoncharts-1.4-eval-nofx.jar=D:\\Executaveis\\Biblioteca Java\\jfreechart-1.0.19\\lib\\orsoncharts-1.4-eval-nofx.jar
 file.reference.orsonpdf-1.6-eval.jar=D:\\Executaveis\\Biblioteca Java\\jfreechart-1.0.19\\lib\\orsonpdf-1.6-eval.jar
 file.reference.servlet.jar=D:\\Executaveis\\Biblioteca Java\\jfreechart-1.0.19\\lib\\servlet.jar
@@ -61,7 +62,8 @@ javac.classpath=\
     ${file.reference.servlet.jar}:\
     ${file.reference.swtgraphics2d.jar}:\
     ${libs.Mysql_Connector_Java_5.1.49.classpath}:\
-    ${libs.absolutelayout.classpath}
+    ${libs.absolutelayout.classpath}:\
+    ${file.reference.mysql-connector-java-5.1.47.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
